2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in: Use portable `.' rather than non-portable
	`source'.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/genmod.sh.in: Use 'set -e' rather than '#! /bin/sh -e',
	to avoid accidents when debugging with 'sh -x'.
	* grub-core/gensyminfo.sh.in: Likewise.
	* tests/example_scripted_test.in: Likewise.
	* tests/grub_cmd_regexp.in: Likewise.
	* tests/grub_script_blanklines.in: Likewise.
	* tests/grub_script_dollar.in: Likewise.
	* tests/grub_script_expansion.in: Likewise.
	* tests/grub_script_final_semicolon.in: Likewise.
	* tests/partmap_test.in: Likewise.
	* tests/util/grub-shell-tester.in: Likewise.
	* tests/util/grub-shell.in: Likewise.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	Move gfxmenu color handling to video, so that gfxterm can use it
	too.

	* grub-core/gfxmenu/named_colors.c: Move to ...
	* grub-core/video/colors.c: ... here.  Rename
	grub_gui_get_named_color to grub_video_get_named_color.
	* grub-core/gfxmenu/gui_string_util.c (my_isxdigit): Move to ...
	* grub-core/video/colors.c (my_isxdigit): ... here.
	* grub-core/gfxmenu/gui_string_util.c (parse_hex_color_component):
	Move to ...
	* grub-core/video/colors.c (parse_hex_color_component): ... here.
	* grub-core/gfxmenu/gui_string_util.c (grub_gui_parse_color): Move
	to ...
	* grub-core/video/colors.c (grub_video_parse_color): ... here.

	* include/grub/gui.h (grub_gui_color_t): Move to ...
	* include/grub/video.h (grub_video_rgba_color_t): ... here.
	* include/grub/gui.h (grub_gui_color_rgb): Move to ...
	* include/grub/video.h (grub_video_rgba_color_rgb): ... here.
	* include/grub/gui.h (grub_gui_map_color): Move to ...
	* include/grub/video.h (grub_video_map_rgba_color): ... here.
	* include/grub/gui_string_util.h (grub_gui_get_named_color): Move
	to ...
	* include/grub/video.h (grub_video_get_named_color): ... here.
	* include/grub/gui_string_util.h (grub_gui_parse_color): Move to ...